--- a/index.html
+++ b/index.html
@@ -4,7 +4,82 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.5.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/hngg0023/3179-Assignment2/main/styles.css" media="all">
+  <style>
+    body {
+    background-color: #9f2a2a;
+}
+
+#l-align{
+    text-align: left;
+    border: 1px solid black;
+}
+
+#c-align{
+    text-align: center;
+    border: 1px solid black;
+}
+
+#r-align{
+    text-align: right;
+    border: 1px solid black;
+}
+
+/* Center all graphs vertically and horizontally */
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.graph {
+    margin-bottom: 50px;
+    padding: 10px;
+}
+
+.scatter-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 800px;
+}
+
+
+
+.title {
+    font-family: sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    margin: 20px 0;
+    color: white;
+}
+
+.title img {
+    width: 65pt; /* Set the width of the image to match the title size */
+    height: 45pt; /* Set the height of the image to match the title size */
+    margin-left: 10px; /* Adjust the margin as needed */
+    margin-top: 15px;
+  }
+
+.title main{
+    font-family: sans-serif;
+    font-size: 18px;
+    margin: 10px 0;
+    color: white;
+    text-indent: 50px;
+    line-height: 2;
+}
+
+.title last{
+    font-family: sans-serif;
+    font-size: 15px;
+    margin: 10px 0;
+    color: white;
+    text-indent: 50px;
+    line-height: 2;
+}
+  </style>
   
 </head>
 <body>
